ext/css/action-popup.css
/*
 * Copyright (C) 2020-2022  Yomichan Authors
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

:root {
    --font-size-no-units: 14;
    --font-size: calc(1px * var(--font-size-no-units));

    --line-height-no-units: 20;
    --line-height: calc(var(--line-height-no-units) / var(--font-size-no-units));

    --badge-size: 16px;

    --warning-color: #96751c;
    --warning-color-light: #edc75e;
}

body {
    padding: 10px;
    margin: 0;
    font-family: 'Segoe UI', Tahoma, sans-serif;
    font-size: var(--font-size);
}

h3 {
    margin: 10px 0;
    font-family: inherit;
    font-weight: 500;
    line-height: 1.1;
    font-size: 24px;
    color: inherit;
}
label {
    font-weight: normal;
}

#mini {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
}
#full {
    display: none;
}
:root[data-mode=full] #mini {
    display: none;
}
:root[data-mode=full] #full {
    display: initial;
}


/* Icons */
.icon {
    --icon-image: none;
    --icon-size: contain;

    -webkit-mask-repeat: no-repeat;
    -webkit-mask-position: center center;
    -webkit-mask-mode: alpha;
    -webkit-mask-size: var(--icon-size);
    -webkit-mask-image: var(--icon-image);
    mask-repeat: no-repeat;
    mask-position: center center;
    mask-mode: alpha;
    mask-size: var(--icon-size);
    mask-image: var(--icon-image);
}
.icon[data-icon=profile]                 { --icon-image: url(/images/profile.svg); }
.icon[data-icon=cog]                     { --icon-image: url(/images/cog.svg); }
.icon[data-icon=key]                     { --icon-image: url(/images/key.svg); }
.icon[data-icon=magnifying-glass]        { --icon-image: url(/images/magnifying-glass.svg); }
.icon[data-icon=exclamation-point-short] { --icon-image: url(/images/exclamation-point-short.svg); }
.icon[data-icon=question-mark-circle]    { --icon-image: url(/images/question-mark-circle.svg); }


/* Page-specific styles */
.link-group {
    flex-flow: row nowrap;
    align-items: center;
    line-height: 1.5em;
    margin: 0 -10px;
    padding: 0.5em 10px;
    cursor: pointer;
    color: #333;
    text-decoration: none;
    background-color: transparent;
    transition: background-color 0.125s linear 0s;
    max-width: none;
}
.link-group:not([hidden]) {
    display: flex;
}
.link-group:hover,
.link-group:active {
    color: #333;
    text-decoration: none;
}
.link-group:hover>.link-group-label,
.link-group:active>.link-group-label {
    text-decoration: underline;
}
.link-group:hover {
    background-color: rgba(0, 0, 0, 0.05);
}
.link-group:active {
    background-color: rgba(0, 0, 0, 0.1);
}
.link-group-icon {
    width: 16px;
    height: 16px;
    text-align: center;
    vertical-align: middle;
    display: inline-block;
    margin-right: 0.25em;
}
.link-group-icon>input {
    margin: 0;
    padding: 0;
}
.link-group-icon[data-icon=chevron]::after {
    content: '';
    display: block;
    width: 100%;
    height: 100%;
    background-image: url(/images/right-chevron.svg);
    background-repeat: no-repeat;
    background-position: center center;
    background-size: contain;
}
.link-group-label {
    vertical-align: middle;
}
.link-group-badge {
    margin-left: 0.5em;
}

/* Toggle */
.toggle>input[type=checkbox] {
    width: 0;
    height: 0;
    opacity: 0;
    display: block;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}
.toggle>input[type=checkbox]:not(:checked)~.toggle-group {
    transform: translateX(-50%);
}
.toggle {
    box-sizing: border-box;
    width: 60px;
    height: 34px;
    position: relative;
    overflow: hidden;
    border: 1px solid #245580;
    border-radius: 4px;
    display: inline-block;
    padding: 6px 12px;
}
.toggle-group {
    position: absolute;
    width: 200%;
    left: 0;
    top: 0;
    bottom: 0;
    user-select: none;
}
body[data-loaded=true] .toggle-group {
    transition: transform 0.35s;
}

.toggle-on,
.toggle-off,
.toggle-handle {
    display: block;
    padding: 6px 12px;
    font-size: var(--font-size);
    font-weight: normal;
    line-height: var(--line-height);
    text-align: center;
    white-space: nowrap;
    cursor: pointer;
}
.toggle-on,
.toggle-off {
    position: absolute;
    top: 0;
    bottom: 0;
    margin: 0;
    border: 0;
}

.toggle-on {
    padding-right: 24px;
    left: 0;
    right: 50%;
    color: #ffffff;
    background-color: #337ab7;
    border-color: #2e6da4;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), inset 0 3px 5px rgba(0, 0, 0, 0);
    background-image: linear-gradient(#337ab7, #265a88);
    background-repeat: repeat-x;
}
input[type=checkbox]:focus~.toggle-group>.toggle-on,
input[type=checkbox]~.toggle-group>.toggle-on:hover {
    background-color: #265a88;
    background-image: linear-gradient(#2d65a0, #265a88 50%);
}
input[type=checkbox]:focus:not(:focus-visible)~.toggle-group>.toggle-on:not(:hover) {
    background-color: #337ab7;
    background-image: linear-gradient(#337ab7, #265a88);
}
input[type=checkbox]:focus-visible~.toggle-group>.toggle-on {
    background-color: #265a88;
    background-image: linear-gradient(#2d65a0, #265a88 50%);
}
input[type=checkbox]~.toggle-group>.toggle-on:active,
input[type=checkbox]~.toggle-group>.toggle-on:active:focus {
    background-color: #204d74;
    background-image: none;
    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}

.toggle-off {
    padding-left: 24px;
    left: 50%;
    right: 0;
}

.toggle-handle {
    position: relative;
    margin: 0 auto;
    padding-top: 0;
    padding-bottom: 0;
    height: 100%;
    width: 0;
    border-style: solid;
    border-width: 0 1px;
    border-radius: 4px;
    border-color: #cccccc;
}

.toggle-off,
.toggle-handle {
    color: #333333;
    text-shadow: 0 1px 0 #ffffff;
    background-color: #ffffff;
    background-image: linear-gradient(#ffffff, #e0e0e0);
    background-repeat: repeat-x;
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
}
input[type=checkbox]:focus~.toggle-group>.toggle-off,
input[type=checkbox]~.toggle-group>.toggle-off:hover,
input[type=checkbox]~.toggle-group>.toggle-handle:hover {
    background-color: #e6e6e6;
    background-image: linear-gradient(#e0e0e0, #e6e6e6 50%);
    border-color: #adadad;
}
input[type=checkbox]:focus:not(:focus-visible)~.toggle-group>.toggle-off:not(:hover) {
    background-color: #ffffff;
    background-image: linear-gradient(#ffffff, #e0e0e0);
    border-color: #cccccc;
}
input[type=checkbox]:focus-visible~.toggle-group>.toggle-off,
input[type=checkbox]~.toggle-group>.toggle-off:hover {
    background-color: #e6e6e6;
    background-image: linear-gradient(#e0e0e0, #e6e6e6 50%);
    border-color: #adadad;
}
input[type=checkbox]~.toggle-group>.toggle-off:active,
input[type=checkbox]~.toggle-group>.toggle-handle:active,
input[type=checkbox]~.toggle-group>.toggle-off:active:focus,
input[type=checkbox]~.toggle-group>.toggle-handle:active:focus {
    background-color: #d4d4d4;
    background-image: none;
    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
    border-color: #8c8c8c;
}


/* Navigation buttons and icons */
.nav-button-container {
    display: flex;
    justify-content: center;
    margin-top: 10px;
    white-space: nowrap;
}
.nav-button {
    background-image: linear-gradient(#f8f8f8, #e0e0e0);
    border: 1px solid #cccccc;
    margin: 0;
    padding: 2px 3px;
    cursor: pointer;
    position: relative;
}
.nav-button+.nav-button {
    margin-left: -1px;
}
.nav-button:hover,
.nav-button:focus {
    z-index: 1;
    border-color: #aaaaaa;
    background-image: linear-gradient(#e8e8e8, #d0d0d0);
    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
    outline: none;
}
.nav-button:focus:not(:focus-visible) {
    background-image: linear-gradient(#f8f8f8, #e0e0e0);
    border-color: #cccccc;
    box-shadow: none;
}
.nav-button:focus-visible {
    z-index: 1;
    border-color: #aaaaaa;
    background-image: linear-gradient(#e8e8e8, #d0d0d0);
    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
}
.nav-button:active,
.nav-button:active:focus {
    z-index: 1;
    border-color: #808080;
    background-image: linear-gradient(#c8c8c8, #e0e0e0);
    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
}
.nav-button>.icon {
    --icon-size: 16px 16px;
    display: block;
    width: 16px;
    height: 16px;
    box-sizing: content-box;
    background-color: #333333;
}
.nav-button:first-child,
.nav-button:first-child[hidden]+.nav-button {
    border-top-left-radius: 3px;
    border-bottom-left-radius: 3px;
}
.nav-button:last-child {
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
}

.action-select-profile {
    position: relative;
}
.profile-select-container {
    position: absolute;
    left: -1px;
    top: -1px;
    right: -1px;
    bottom: -1px;
}
select.profile-select {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    border: 0;
    margin: 0;
    padding: 0.375em;
    appearance: none;
    -moz-appearance: none;
    -webkit-appearance: none;
    opacity: 0;
    outline: none;
    cursor: pointer;
    font-size: var(--font-size);
}
.profile-select optgroup {
    color: #666666;
    font-weight: normal;
    font-style: normal;
    background-color: #f2f2f2;
}
.profile-select option {
    color: #333333;
    font-weight: normal;
    font-style: normal;
    background-color: initial;
}

.nav-button-warning-badge {
    pointer-events: none;
    width: 12px;
    height: 6px;
    position: absolute;
    right: calc(50% - 6px);
    top: -8px;
    z-index: 1;
}
.nav-button-warning-badge-inner,
.nav-button-warning-badge-outer {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    background-color: #edc75e;

    --icon-image: url(/images/material-down-arrow.svg);
    --icon-size: contain;

    -webkit-mask-repeat: no-repeat;
    -webkit-mask-position: center center;
    -webkit-mask-mode: alpha;
    -webkit-mask-size: var(--icon-size);
    -webkit-mask-image: var(--icon-image);
    mask-repeat: no-repeat;
    mask-position: center center;
    mask-mode: alpha;
    mask-size: var(--icon-size);
    mask-image: var(--icon-image);
}
.nav-button-warning-badge-inner {
    margin: 1px 2px;
}
.nav-button-warning-badge-outer {
    animation: nav-button-warning-badge-animation ease-in-out 2s alternate infinite;
}
@keyframes nav-button-warning-badge-animation {
    0% { opacity: 1; background-color: #edc75e; }
    100% { opacity: 1; background-color: #333333; }
}

.warning-badge {
    position: relative;
    width: var(--badge-size);
    height: var(--badge-size);
    margin: 0;
    padding: 0;
    background-color: var(--warning-color-light);
    border-radius: 50%;
    box-shadow: var(--shadow-vertical);
}
.warning-badge:not([hidden]) {
    display: block;
}
.warning-badge>.icon {
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    background-color: var(--warning-color);
}

